fix issue with Pipe webcam display covering page elements (#334)
fix issues with Pipe webcam display covering page elements in instructions, observation, webcam-display, video-config-quality, video-config, video-assent frames

--- a/app/styles/components/exp-lookit-instructions.scss
+++ b/app/styles/components/exp-lookit-instructions.scss
@@ -50,6 +50,10 @@
         margin: 0;
     }
 
+    video.pipeNormal {
+        min-height: unset !important;
+    }
+
     .media-wrapper {
         width: 100%;
     }
